# jcode-buddy

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  _setup.bat  partitions.csv  sdkconfig  sdkconfig.defaults
components/audio_bsp/: CMakeLists.txt  audio_bsp.c  audio_bsp.h
components/board_config/: CMakeLists.txt  user_config.h
components/codec_board/: CMakeLists.txt  codec_init.c  idf_component.yml
components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c  i2c_bsp.h
components/i2c_equipment/: CMakeLists.txt  i2c_equipment.cpp  i2c_equipment.h  idf_component.yml
components/lcd_bl_pwm_bsp/: CMakeLists.txt  lcd_bl_pwm_bsp.c  lcd_bl_pwm_bsp.h
components/wifi_bsp/: CMakeLists.txt  wifi_bsp.c  wifi_bsp.h
go-ble/: go.mod  main.go
main/: CMakeLists.txt  Kconfig.projbuild  app_ble.c  app_ble.h  asr_client.c  asr_client.h  idf_component.yml  lvgl_lock.h  main.c  ui_ble.c  ui_ble.h  ui_clock.c  ui_clock.h  ui_main.c  ui_main.h  ui_styles.c  ui_styles.h  ui_voice.c  ui_voice.h  ui_wifi_setup.c  ui_wifi_setup.h  user_config.h  wifi_prov.c  wifi_prov.h
main/asset/: connected.pcm  dashscope_ca.pem  successful.pcm  wifi_setup.html
